@@ -6,6 +6,7 @@ Changes in version 1.2 (TBD)
   Closes feature request 2821408.
 - Sky at a glance is now more interactive. Show pass summary when mouse hovers over pass and
   click on pass shows the details.
+- Added satellite tooltips in polar view showing current Az, El and time to LOS.
 * Feature request 2866570: Set operating mode via CAT.
 * Feature request 2873824: Flip Passes.
 * Feature request 2778735: Visual indicator for RX/TX/TRX.
